# erastus

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: file_handler.py  transcriber.py
src/erastus/: models.py  summarizer.py  transcription_processor.py
